fixed footer spacing

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,3 +2,6 @@
   font-size: 0.6rem;
 }
 
+body {
+  padding-bottom: 0px;
+}
